<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".views.MovieDescActivity">
    <data>
        <variable name="viewModel"
                  type="com.cry.tmdbclient.viewmodels.MovieDescViewModel"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_colorBackground"
                android:animateLayoutChanges="true">
            <ImageView
                    android:id="@+id/imvBackDrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/johnwick_backdrop"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:id="@+id/txtMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.title}"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:layout_margin="25dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintTop_toBottomOf="@id/imvBackDrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:id="@+id/txtMovieSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.tagline}"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textStyle="bold"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintTop_toBottomOf="@id/txtMovieTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <ImageView
                    android:id="@+id/imvStar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_24dp"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imvStar2"
                    app:layout_constraintTop_toBottomOf="@id/txtMovieSubtitle"
            />
            <ImageView
                    android:id="@+id/imvStar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_24dp"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toEndOf="@id/imvStar1"
                    app:layout_constraintEnd_toStartOf="@+id/imvStar3"
                    app:layout_constraintTop_toBottomOf="@id/txtMovieSubtitle"
            />
            <ImageView
                    android:id="@+id/imvStar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_24dp"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toEndOf="@id/imvStar2"
                    app:layout_constraintEnd_toStartOf="@+id/imvStar4"
                    app:layout_constraintTop_toBottomOf="@id/txtMovieSubtitle"
            />
            <ImageView
                    android:id="@+id/imvStar4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_24dp"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toEndOf="@id/imvStar3"
                    app:layout_constraintEnd_toStartOf="@+id/imvStar5"
                    app:layout_constraintTop_toBottomOf="@id/txtMovieSubtitle"
            />
            <ImageView
                    android:id="@+id/imvStar5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_star_border_24dp"
                    app:layout_constraintStart_toEndOf="@id/imvStar4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtMovieSubtitle"
            />
            <LinearLayout
                    android:id="@+id/divRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imvStar1">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/ic_star_24dp"/>
                <TextView
                        android:id="@+id/txtVoteAverage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.voteAverageString}"
                        android:layout_gravity="center"
                        android:textColor="@color/colorSecondaryText"
                />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/ic_account_circle_black_24dp"/>
                <TextView
                        android:id="@+id/txtVoteCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.voteCount}"
                        android:layout_gravity="center"
                        android:textColor="@color/colorSecondaryText"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@{viewModel.overview}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divRating"
            />
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lstActors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtOverview"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="5"
                    tools:listitem="@layout/actor_listitem"
            />
            <Button android:id="@+id/btnAddFavorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:drawableStart="@drawable/ic_favorite_outline_24dp"
                    android:drawableLeft="@drawable/ic_favorite_outline_24dp"
                    android:text="@string/add_favorites"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:onClick="@{() -> viewModel.toggleFavorite()}"
                    android:background="@color/listItemBackground"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintTop_toBottomOf="@id/lstActors"
                    app:layout_constraintStart_toStartOf="parent"/>

            <Button android:id="@+id/btnAddWatchList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:drawableStart="@drawable/ic_list_24dp"
                    android:drawableLeft="@drawable/ic_list_24dp"
                    android:text="@string/add_watchlist"
                    android:onClick="@{() -> viewModel.toggleWatchList()}"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:background="@color/listItemBackground"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintTop_toBottomOf="@id/btnAddFavorite"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:id="@+id/lblBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    app:layout_constraintTop_toBottomOf="@id/btnAddWatchList"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/stats_budget"/>
            <TextView
                    android:id="@+id/txtBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    app:layout_constraintTop_toBottomOf="@id/btnAddWatchList"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@{viewModel.budget}"/>
            <View
                    android:id="@+id/vwDivBudget"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/txtBudget"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:id="@+id/lblRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivBudget"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/stats_revenue"/>
            <TextView
                    android:id="@+id/txtRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivBudget"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@{viewModel.revenue}"/>
            <View
                    android:id="@+id/vwDivRevenue"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/txtRevenue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:id="@+id/lblReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivRevenue"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/stats_release_date"/>
            <TextView
                    android:id="@+id/txtReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivRevenue"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@{viewModel.releaseDate}"/>
            <View
                    android:id="@+id/vwDivReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/txtReleaseDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:id="@+id/lblStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivReleaseDate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/stats_status"/>
            <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivReleaseDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@{viewModel.status}"/>
            <View
                    android:id="@+id/vwDivStatus"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/txtStatus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
            <TextView
                    android:id="@+id/lblAdult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivStatus"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/stats_is_adult"/>
            <TextView
                    android:id="@+id/txtAdult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:layout_constraintTop_toBottomOf="@id/vwDivStatus"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@{viewModel.isAdult}"/>
            <View
                    android:id="@+id/vwDivAdult"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintTop_toBottomOf="@id/lblAdult"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>